@@ -1,5 +1,6 @@
 from contextlib import contextmanager
 from .termui import get_terminal_size
+from .parser import split_opt
 from ._compat import term_len
 
 
@@ -216,3 +217,23 @@ class HelpFormatter(object):
     def getvalue(self):
         """Returns the buffer contents."""
         return ''.join(self.buffer)
+
+
+def join_options(options):
+    """Given a list of option strings this joins them in the most appropriate
+    way and returns them in the form ``(formatted_string,
+    any_prefix_is_slash)`` where the second item in the tuple is a flag that
+    indicates if any of the option prefixes was a slash.
+    """
+    rv = []
+    any_prefix_is_slash = False
+    for opt in options:
+        prefix = split_opt(opt)[0]
+        if prefix == '/':
+            any_prefix_is_slash = True
+        rv.append((len(prefix), opt))
+
+    rv.sort(key=lambda x: x[0])
+
+    rv = ', '.join(x[1] for x in rv)
+    return rv, any_prefix_is_slash
