@@ -29,6 +29,13 @@ def split_opt(opt):
     return first, opt[1:]
 
 
+def normalize_opt(opt, ctx):
+    if ctx is None or ctx.token_normalize_func is None:
+        return opt
+    prefix, opt = split_opt(opt)
+    return prefix + ctx.token_normalize_func(opt)
+
+
 def split_arg_string(string):
     """Given an argument string this attempts to split it into small parts."""
     rv = []
@@ -156,6 +163,7 @@ class OptionParser(object):
         """
         if obj is None:
             obj = dest
+        opts = [normalize_opt(opt, self.ctx) for opt in opts]
         option = Option(opts, dest, action=action, nargs=nargs,
                         const=const, obj=obj)
         self._opt_prefixes.update(option.prefixes)
@@ -268,6 +276,8 @@ class OptionParser(object):
             opt = arg
             had_explicit_value = False
 
+        opt = normalize_opt(opt, self.ctx)
+
         opt = self._match_long_opt(opt)
         option = self._long_opt[opt]
         if option.takes_value:
@@ -292,14 +302,14 @@ class OptionParser(object):
         option.process(value, state)
 
     def _process_opts(self, arg, state):
-        if '=' in arg or arg in self._long_opt:
+        if '=' in arg or normalize_opt(arg, self.ctx) in self._long_opt:
             return self._process_long_opt(arg, state)
 
         stop = False
         i = 1
         prefix = arg[0]
         for ch in arg[1:]:
-            opt = prefix + ch
+            opt = normalize_opt(prefix + ch, self.ctx)
             option = self._short_opt.get(opt)
             i += 1
 
