@@ -40,6 +40,10 @@ Version 2.0
   built-in but becomes an automatic noop if the application is not run
   through a terminal.
 - added a bit of extra information about missing choice parameters.
+- changed how the help function is implemented to allow global overriding
+  of the help option.
+- added support for token normalization to implement case insensitive handling.
+- added support for providing defaults for context settings.
 
 Version 1.1
 -----------
